ajout du bouton deconnection dans advertiser, pas fonctionnel

--- a/frontend/src/app/advertiser/advertiser.component.html
+++ b/frontend/src/app/advertiser/advertiser.component.html
@@ -34,3 +34,4 @@
         <button (click)="modifierMDP()" type="submit" class="btn btn-primary">Modifier</button>
     </div>
 </div>
+<button type="submit" class="btn btn-deco">Déconnecter</button>
