--- a/frontend/src/app/advertiser/advertiser.component.scss
+++ b/frontend/src/app/advertiser/advertiser.component.scss
@@ -2,7 +2,7 @@
 
 .container{
     width: 100%;
-    height: 100vh;
+    height: 75vh;
     display: flex;
     margin:0;
     max-width: 100%;
@@ -20,6 +20,7 @@
         margin-top: 0.5rem;
         transition: 0.3s;
         height: 50px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
     button:hover{
         background-color: #A680F8;
@@ -51,6 +52,7 @@
         margin-top: 0.5rem;
         transition: 0.3s;
         height: 50px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
     button:hover{
         background-color: #A680F8;
@@ -87,4 +89,17 @@ h2{
 
 .alert{
   width: 45%;
+}
+
+.btn-deco{
+    background-color: $rose;
+    color: white;
+    padding: 0.8rem 1.5rem 0.8rem 1.5rem;
+    margin-left: 3rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: 0.3s;
+}
+.btn-deco:hover{
+    background-color: #CE35AD;
+
 }
