--- a/frontend/src/app/search/search.component.scss
+++ b/frontend/src/app/search/search.component.scss
@@ -84,10 +84,36 @@
         width: 320px;
         height: 220px;
     }
-    p{
+    p.title{
         width: 90%;
         word-wrap: anywhere;
         margin-top: 0.3rem;
+        font-size: 16px;
+    }
+    .channel{
+        font-size: 12px;
+        margin-left: 0.5rem;
+        color: #9E9E9E;
+        display: flex;
+        .bi{
+            margin-right: 0.5rem;
+        }
+        margin-bottom: -0.8rem;
+    }
+    .date{
+        font-size: 12px;
+        margin-left: 0.5rem;
+        color:  #9E9E9E;
+        display:flex;
+        .bi{
+            margin-right: 0.5rem;
+        }
+        margin-bottom: -0.5rem;
+    }
+    p.provider{
+        font-size: 12px;
+        margin-left: 0.5rem;
+        color:  #9E9E9E;
     }
 }
 
