--- a/frontend/src/app/inscription/inscription.component.scss
+++ b/frontend/src/app/inscription/inscription.component.scss
@@ -46,7 +46,7 @@ div.logo{
     p{
         margin-bottom: 0;
     }
-    .form-control{
+    .form-control, #selectCountry{
         border-right: none !important;
         border-top: none !important;
         border-left: none !important;
@@ -54,7 +54,43 @@ div.logo{
         border-radius: 0;
         border-bottom: solid 2px $violetbouton;
     }
+
+    #selectCountry{
+        width: 100%;
+        color: $violetbouton !important;
+        ::ng-deep .mat-form-field{
+            display: block !important;
+            border-bottom: solid 2px $violetbouton;
+        }
+        ::ng-deep .mat-form-field-underline{
+            display: none;
+        }
+        ::ng-deep .mat-form-field-wrapper{
+            padding-bottom: 0;
+        }
+        ::ng-deep .mat-form-field-infix{
+            border: none;
+        }
+        ::ng-deep .mat-form-field-label-wrapper{
+            left: 0.8rem;
+        }
+        ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-label{
+            color: $violetbouton;
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1.5;
+            padding-bottom: 0.5rem;
+        }
+        ::ng-deep .mat-form-field-flex{
+            padding-bottom: 0.5rem;
+        }
+    }
+    
     input::placeholder {
         color: $violetbouton;
     }
 }
+
+// #selectCountry{
+
+// }
