--- a/frontend/src/app/advertiser/advertiser.component.scss
+++ b/frontend/src/app/advertiser/advertiser.component.scss
@@ -36,6 +36,40 @@
         border-radius: 0;
         border-bottom: solid 2px $violetbouton;
     }
+    #selectCountry{
+        width: 100%;
+        color: $violetbouton !important;
+        ::ng-deep .mat-form-field{
+            display: block !important;
+            background-color: white;
+            border-bottom: solid 2px $violetbouton;
+            height: 50px;
+            border-radius: 5px;
+            margin-bottom: 2rem;
+        }
+        ::ng-deep .mat-form-field-underline{
+            display: none;
+        }
+        ::ng-deep .mat-form-field-wrapper{
+            padding-bottom: 0;
+        }
+        ::ng-deep .mat-form-field-infix{
+            border: none;
+        }
+        ::ng-deep .mat-form-field-label-wrapper{
+            left: 0.8rem;
+        }
+        ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-label{
+            color: $violetbouton;
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1.5;
+            padding-bottom: 0.5rem;
+        }
+        ::ng-deep .mat-form-field-flex{
+            padding-bottom: 0.5rem;
+        }
+    }
     input::placeholder {
         color: $violetbouton;
     }
