--- a/frontend/src/app/inscription-annonceur/inscription-annonceur.component.html
+++ b/frontend/src/app/inscription-annonceur/inscription-annonceur.component.html
@@ -22,7 +22,7 @@
                 <input [(ngModel)]="lastName" type="lastName" class="form-control" id="exampleInputPassword1" placeholder="Nom de famille">
             </div>
             <div class="form-group">
-                <input [(ngModel)]="nationality" type="nationality" class="form-control" id="exampleInputPassword1" placeholder="Nationalité">
+                <mat-select-country id = "selectCountry" placeHolder="Nationalité"></mat-select-country>
             </div>
             <div class="form-group">
                 <input [(ngModel)]="company" type="company" class="form-control" id="exampleInputPassword1" placeholder="Entreprise">
