--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -4,8 +4,8 @@
 .navbar{
     z-index: 10;
     justify-content: left;
-    // background: linear-gradient(140deg, #702DFF 17%, #937AC9 77%);
-     background: linear-gradient(#702DFF,#937AC9);
+    //  background: linear-gradient(#702DFF,#937AC9);
+     background: linear-gradient(178deg, #702DFF 15%, #937AC9 90%);
   cursor: pointer;
     a{
         display: flex;
