--- a/frontend/src/app/user/user.component.html
+++ b/frontend/src/app/user/user.component.html
@@ -8,8 +8,11 @@
         <div class="form-group">
             <input [(ngModel)]="newLastName" type="lastName" class="form-control" placeholder={{lastName}}>
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <input [(ngModel)]="newNationality" type="nationality" class="form-control"  placeholder={{nationality}}>
+        </div> -->
+        <div class="form-group">
+            <mat-select-country id = "selectCountry" placeHolder="Nationalité"></mat-select-country>
         </div>
         <div style = "margin-top: 10px;" *ngIf="errorMessagegauche.length!=0" class="alert alert-danger" role="alert">{{errorMessagegauche}}</div>
         <div style = "margin-top: 10px;" *ngIf="checkMessagegauche.length!=0" class="alert alert-success" role="alert">{{checkMessagegauche}}</div>
