--- a/frontend/src/app/user/user.component.scss
+++ b/frontend/src/app/user/user.component.scss
@@ -46,6 +46,8 @@
             height: 50px;
             border-radius: 5px;
             margin-bottom: 2rem;
+            padding-right: 2rem;
+            padding-top: 0.5rem;
         }
         ::ng-deep .mat-form-field-underline{
             display: none;
@@ -68,6 +70,12 @@
         }
         ::ng-deep .mat-form-field-flex{
             padding-bottom: 0.5rem;
+        }
+        ::ng-deep input.mat-input-element{
+            padding-left: 1rem;
+        }
+        ::ng-deep .mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label, .mat-form-field-appearance-legacy.mat-form-field-can-float .mat-input-server:focus + .mat-form-field-label-wrapper .mat-form-field-label{
+            display: none;
         }
     }
 
