--- a/frontend/src/app/inscription/inscription.component.html
+++ b/frontend/src/app/inscription/inscription.component.html
@@ -22,7 +22,7 @@
                 <input [(ngModel)]="lastName" type="lastName" class="form-control" id="exampleInputPassword1" placeholder="Nom de famille">
             </div>
             <div class="form-group">
-              <mat-select-country id = "selectCountry" placeHolder="Nationalité"></mat-select-country>
+              <mat-select-country (onCountrySelected)="countrySelected($event)" id = "selectCountry" placeHolder="Nationalité"></mat-select-country>
             </div>
             <div style = "margin-top: 10px; margin-left: 10px" *ngIf="errorMessage.length!=0" class="alert alert-danger" role="alert">{{errorMessage}}</div>
             <button (click)="affichage()" type="submit" class="btn btn-primary">S'inscrire</button>
