changement navbar admin

--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -1,4 +1,10 @@
-<app-navbar></app-navbar>
+<nav class="navbar navbar-light">
+    <a [routerLink]="['/adminpage']" routerLinkActive="router-link-active"  class="navbar-brand">
+        <img src="../../assets/Image1.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <p>WatchIt</p>
+    </a>
+</nav>
+
 <div class="haut">
     <h2>Liste des utilisateurs et annonceurs :</h2>
     <!-- <app-create-playlist (newItemEvent)="onCreatePlaylist($event)"></app-create-playlist> -->
