--- a/frontend/src/app/zoomvideo/zoomvideo.component.scss
+++ b/frontend/src/app/zoomvideo/zoomvideo.component.scss
@@ -10,7 +10,7 @@
     iframe{
         width: 65%;
         margin-right: 1rem;
-        box-shadow: $boutongris 0px 5px 15px;
+        box-shadow: #AEAEAE 0px 5px 15px;
     }
     .description{
       height: 530px;
