--- a/frontend/src/app/admin/admin.component.scss
+++ b/frontend/src/app/admin/admin.component.scss
@@ -48,6 +48,7 @@ h2{
         border-radius: 10px;
         border: solid 2px $violetbouton;
         transition: 0.3s;
+        margin-bottom: 2rem;
         img.photo{
             margin-top: 1rem;
             margin-bottom: 1rem;
