--- a/frontend/src/app/user/user.component.scss
+++ b/frontend/src/app/user/user.component.scss
@@ -2,7 +2,7 @@
 
 .container{
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     margin:0;
     max-width: 100%;
@@ -132,4 +132,17 @@ h2{
 
 .alert{
   width: 45%;
+}
+
+.btn-deco{
+    background-color: $rose;
+    color: white;
+    padding: 0.8rem 1.5rem 0.8rem 1.5rem;
+    margin-left: 3rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: 0.3s;
+}
+.btn-deco:hover{
+    background-color: #CE35AD;
+
 }
