Guards + fix bug annulation modif playlists + deco

--- a/frontend/src/app/user/user.component.html
+++ b/frontend/src/app/user/user.component.html
@@ -34,3 +34,5 @@
         <button (click)="modifierMDP()" type="submit" class="btn btn-primary">Modifier</button>
     </div>
 </div>
+
+<button type="submit" (click)="disconnect()" class="btn btn-deco">Se déconnecter</button>
