--- a/frontend/src/app/advertiser/advertiser.component.html
+++ b/frontend/src/app/advertiser/advertiser.component.html
@@ -37,4 +37,5 @@
         <button (click)="modifierMDP()" type="submit" class="btn btn-primary">Modifier</button>
     </div>
 </div>
-<button type="submit" class="btn btn-deco">Déconnecter</button>
+
+<button type="submit" (click)="disconnect()" class="btn btn-deco">Se déconnecter</button>
