--- a/frontend/src/app/advertiser/advertiser.component.scss
+++ b/frontend/src/app/advertiser/advertiser.component.scss
@@ -140,8 +140,8 @@ h2{
     margin-left: 3rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: 0.3s;
+    cursor: pointer;
 }
 .btn-deco:hover{
     background-color: #CE35AD;
-
 }
