Hover sur icone

--- a/frontend/src/app/navbar-advert/navbar-advert.component.html
+++ b/frontend/src/app/navbar-advert/navbar-advert.component.html
@@ -4,8 +4,8 @@
         <p>WatchIt</p>
     </a>
     <div class="right">
-        <a [routerLink]="['/advertspage']"><i class="bi bi-badge-ad-fill"></i></a>
-        <a [routerLink]="['/advertiserpage']"><i class="bi bi-person-fill"></i></a>
+        <a [routerLink]="['/advertspage']"><i class="bi bi-badge-ad-fill" title="mes annonces"></i></a>
+        <a [routerLink]="['/advertiserpage']"><i class="bi bi-person-fill" title="mon compte"></i></a>
     </div>
 
 </nav>
