--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -5,8 +5,8 @@
         <p>WatchIt</p>
     </a>
     <div class="right">
-        <a [routerLink]="['/playlistpage']"><i class="bi bi-music-note-list"></i></a>
-        <a [routerLink]="['/userpage']"><i class="bi bi-person-fill"></i></a>
+        <a [routerLink]="['/playlistpage']"><i class="bi bi-music-note-list" title="mes playlists"></i></a>
+        <a [routerLink]="['/userpage']"><i class="bi bi-person-fill" title="mon compte"></i></a>
     </div>
 
 </nav>
