--- a/frontend/src/app/search/search.component.html
+++ b/frontend/src/app/search/search.component.html
@@ -8,8 +8,8 @@
         <button (click)="getVideos(1)" class="btn btn-outline-success my-2 my-sm-0" type="submit" >Rechercher</button>
     </form>
     <div class="right">
-        <a [routerLink]="['/playlistpage']"><i class="bi bi-music-note-list"></i></a>
-        <a [routerLink]="['/userpage']"><i class="bi bi-person-fill"></i></a>
+        <a [routerLink]="['/playlistpage']"><i class="bi bi-music-note-list" title="mes playlists"></i></a>
+        <a [routerLink]="['/userpage']"><i class="bi bi-person-fill" title="mon compte"></i></a>
     </div>
 
 </nav>
