--- a/frontend/src/app/zoomvideo/zoomvideo.component.scss
+++ b/frontend/src/app/zoomvideo/zoomvideo.component.scss
@@ -146,38 +146,8 @@
   }
 }
 
-// .bloc_right .infoVideo{
-//   display: block;
-//   background-color: yellow;
-//   color: white;
-//   p.title{
-//     position: absolute;
-//     bottom: 13%;
-//     left: 2rem;
-//     font-size: 25px;
-//     line-height: 1.3;
-//   }
-// }
-// .barre{
-//   display: flex;
-//   color: white;
-//   border-top: 1px solid white;
-//   .channel{
-//       display: flex;
-//       position: absolute;
-//       left:2rem;
-//       bottom: 8%;
-//       .bi{
-//           margin-right: 0.5rem;
-//       }
-//   }
-//   .date{
-//       display:flex;
-//       position: absolute;
-//       left: 13%;
-//       bottom: 8%;
-//       .bi{
-//           margin-right: 0.5rem;
-//       }
-//   }
-// }
+.alert{
+  width: 30%;
+  float: right;
+  margin-right: 2rem;
+}
