Fix refresh + fix undefined popup quand on clique en dehors

--- a/frontend/src/app/advertspage/advertspage.component.html
+++ b/frontend/src/app/advertspage/advertspage.component.html
@@ -22,3 +22,8 @@
         </div>
     </a>
 </ng-container>
+
+<div *ngIf="showSpinner" class = "divSpinner">
+  <mat-spinner></mat-spinner>
+</div>
+
