--- a/frontend/src/app/delete-playlist-dialog/delete-playlist-dialog.component.html
+++ b/frontend/src/app/delete-playlist-dialog/delete-playlist-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="!onSendRequest" class="container">
   <div mat-dialog-content>
     <h1>Voulez-vous vraiment supprimer {{playlistName}} ?</h1>
   </div>
@@ -7,5 +7,7 @@
     <button mat-button (click)="onClick()">Supprimer</button>
   </div>
 </div>
+
+<mat-spinner *ngIf="onSendRequest"></mat-spinner>
 
 
