--- a/frontend/src/app/search/search.component.scss
+++ b/frontend/src/app/search/search.component.scss
@@ -154,3 +154,7 @@
   align-items: center;
   margin-top: 250px;
 }
+
+:host ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+  stroke: white;
+}
