--- a/frontend/src/app/advertspage/advertspage.component.scss
+++ b/frontend/src/app/advertspage/advertspage.component.scss
@@ -73,3 +73,14 @@ a:hover{
 .card:hover{
     background-color: #AEAEAE;
 }
+
+.divSpinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 250px;
+}
+
+:host ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+  stroke: white;
+}
