--- a/frontend/src/app/delete-video-dialog/delete-video-dialog.component.scss
+++ b/frontend/src/app/delete-video-dialog/delete-video-dialog.component.scss
@@ -6,7 +6,7 @@
 h1
 {
   font-size: 18px;
-  color: black;
+  color: white;
 }
 
 .form-control
@@ -26,5 +26,9 @@ h1
 {
   background-color: $boutongris;
   color: black;
+}
+
+:host ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+  stroke: white;
 }
 
