--- a/frontend/src/app/edit-playlist-dialog/edit-playlist-dialog.component.html
+++ b/frontend/src/app/edit-playlist-dialog/edit-playlist-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="!onSendRequest" class="container">
     <div mat-dialog-content>
       <h1>Rentrez le nouveau nom de playlist :</h1>
       <input class = "form-control" [(ngModel)]="nom_nouvelle_playlist">
@@ -9,3 +9,5 @@
       <button mat-button (click)="onClick()">Modifier</button>
     </div>
   </div>
+
+<mat-spinner *ngIf="onSendRequest"></mat-spinner>
