--- a/frontend/src/app/inscription/inscription.component.html
+++ b/frontend/src/app/inscription/inscription.component.html
@@ -15,6 +15,9 @@
             <div class="form-group">
                 <input [(ngModel)]="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Mot de passe">
             </div>
+          <div class="form-group">
+            <input [(ngModel)]="confPassword" type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirmez votre mot de passe">
+          </div>
             <div class="form-group">
                 <input [(ngModel)]="firstName" type="fisrtName" class="form-control" id="exampleInputPassword1" placeholder="Prénom">
             </div>
